--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="bottom_navigation_calendar">Calendar</string>
     <string name="bottom_navigation_calculator">Calculator</string>
     <string name="bottom_navigation_settings">Settings</string>
+    <string name="home_screen_add_drink_fab_content_description">Add</string>
 </resources>
