--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="bottom_navigation_calculator">Calculator</string>
     <string name="bottom_navigation_settings">Settings</string>
     <string name="home_screen_add_drink_fab_content_description">Add</string>
+    <string name="drinks_summary_card_today">Today</string>
+    <string name="drinks_summary_card_this_week">This Week</string>
+    <string name="drinks_summary_card_this_month">This Month</string>
+    <string name="drinks_summary_card_collapse_icon_content_description">Collapse details</string>
+    <string name="drinks_summary_card_expand_icon_content_description">Expand details</string>
+    <string name="drinks_summary_card_daily_option_since_midnight">Since 00:00</string>
+    <string name="drinks_summary_card_daily_option_last_24h">Last 24h</string>
+    <string name="drinks_summary_card_weekly_option_this_week">This Week</string>
+    <string name="drinks_summary_card_weekly_option_last_7_days">Last 7 Days</string>
+    <string name="drinks_summary_card_monthly_option_this_month">This Month</string>
+    <string name="drinks_summary_card_monthly_option_last_30_days">Last 30 Days</string>
 </resources>
