--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,14 @@
     <string name="calculator_alcohol_units_suffix">Alcohol Units</string>
     <string name="calculator_fill_details_prompt">Fill in the details above to calculate alcohol units</string>
     <string name="calculator_number_of_drinks">Number of drinks: %d</string>
+    <!-- Calendar Screen -->
+    <string name="calendar_next_month">Next Month</string>
+    <string name="calendar_previous_month">Previous Month</string>
+    <string name="calendar_day_mon">Mon</string>
+    <string name="calendar_day_tue">Tue</string>
+    <string name="calendar_day_wed">Wed</string>
+    <string name="calendar_day_thu">Thu</string>
+    <string name="calendar_day_fri">Fri</string>
+    <string name="calendar_day_sat">Sat</string>
+    <string name="calendar_day_sun">Sun</string>
 </resources>
